Support for implicit propagated ids on create/upade #48